3.6_the_project_step15/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-step15
  namespace: project
  labels:
    name: project-step15
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: project-step15
  template:
    metadata:
      name: project-step15
      labels:
        name: project-step15
        version: v1
    spec:
      containers:
        - name: project-step15
          image: todo-app-image
